# ImprovementNamesCustomizedSSE

./: CMakeLists.txt  ImprovementNamesCustomizedSSE.vcxproj  ImprovementNamesCustomizedSSE.vcxproj.filters  README.md  exports.def  vcpkg.json  version.rc
cmake/: common.cmake
data/Data/SKSE/Plugins/: ImprovementNamesCustomizedSSE.json
include/: Settings.h  TemperFactorManager.h  version.h
src/: CMakeLists.txt  PCH.h  Settings.cpp  Settings.h  TemperFactorManager.cpp  TemperFactorManager.h  main.cpp
